# christfetch

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  font.txt  perso.sh  run.sh
examples/: 1.jsonc  2.jsonc  3.jsonc  4.jsonc
gospel/en/: John.txt  Luke.txt  Mark.txt  Matthew.txt
gospel/fr/: Jean.txt  Luc.txt  Marc.txt  Mathieu.txt  note.txt
include/: command.hpp  function.hpp  logo.hpp
info/: dependancies.txt
script/: conf_gen.py  setup.sh
src/: christfetch.cpp  christfetch.hpp  parse.cpp
src/detection/cpu/: cpu.cpp
src/detection/disk/: disk.h
src/detection/distro/: distro  distrop.cpp
src/detection/gospel/: gospel.cpp
src/detection/gpu/: gpu.cpp
src/detection/hostname/: host.cpp
src/detection/ip/: a.out  ip.cpp
src/detection/kernel/: kernel.cpp
src/detection/memory/: memory.cpp
src/detection/shell/: shell.cpp
src/detection/uptime/: a.out  uptime.cpp
src/detection/user/: username.cpp
src/modules/colors/: colors.cpp
src/modules/cpu/: cpu.cpp
src/modules/disk/: disk  disk.cpp
src/modules/distro/: distro.cpp
src/modules/gospel/: gospel.cpp
src/modules/hostname/: hostname.cpp
src/modules/ip/: ip.cpp  public_ip.cpp
src/modules/kernel/: kernel.cpp  main5
src/modules/memory/: mem  memory.cpp
src/modules/uptime/: uptime.cpp
src/modules/user/: username.cpp
src/util/: christ_ascii.cpp  command.cpp  declar.cpp  display.cpp  display.hpp  os_ascii.cpp
test/: 16.jsonc  a.out  display_ascii.cpp  json_test.cpp  nouveau.cpp  test.cpp
test/form/: test.cpp
